# scivid

./: CHANGELOG.md  README.md  __init__.py  datasets.md  environment.yml  pyproject.toml
colabs/: demo.ipynb
configs/: __init__.py  eval_config.py  launch_config.py  model_config.py
configs/evals/: __init__.py  calms21_classification.py  flyvsfly_classification.py  stir_2d_tracking.py  typhoon_future_pred.py  weatherbench_future_pred.py
configs/models/: __init__.py  hf_videomae.py  mock_model.py  scaling4d.py
data/: __init__.py
data/readers/: __init__.py  base.py  calms21.py  flyvsfly.py  movi.py  stir_2d.py  typhoon.py  utils.py  weather.py
data/transforms/: __init__.py  point_tracking_transforms.py  tf_transforms.py  transforms.py
losses/: __init__.py  tap.py
metrics/: __init__.py  mean_average_precision.py  point_tracking.py  regression.py  stats.py
models/: __init__.py  base_modules.py  dpt.py  pos_embeddings.py  readout_wrapper.py  readouts.py
models/backbones/: __init__.py  pass_through.py  scaling4d.py  videomae.py
optim/: __init__.py  utils.py
summaries/: __init__.py  images.py  utils.py
