[project]
# Project metadata. Available keys are documented at:
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata
name = "scivid"
description = "SciVid: Cross-Domain Evaluation of Video Models in Scientific Applications."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{name = "SciVid team", email="scivid@google.com"}]
classifiers = [  # List of https://pypi.org/classifiers/
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
]
keywords = [
  "video",
  "foundation models",
  "cv4science",
  "ai4science",
  "benchmark",
  "computer vision",
  "weather forecasting",
  "animal behavior",
  "digital typhoon",
  "surgical tracking",
  "pytorch",
  "flax",
  "kauldron",
]

# pip dependencies of the project
# Installed locally with `pip install -e .`
dependencies = [
  # Include change which prevents kauldron data workers from overusing the
  # GPU memory.
  "kauldron @ git+https://github.com/google-research/kauldron.git@8635fa6",
  "representations4d @ git+https://github.com/google-deepmind/representations4d.git",
  "einshape",
  "gcsfs",
  "torch",
  "easydict",
  "timm",
  "transformers",
  "tensorflow_graphics",
  "xarray",
  "xarray_tensorstore",
  "scikit-learn>=1.6.1",
]

version = "1.0.0"

[project.urls]
repository = "https://github.com/google-deepmind/scivid"
changelog = "https://github.com/google-deepmind/scivid/blob/main/CHANGELOG.md"
# documentation = ""

[project.optional-dependencies]
# Development deps (unittest, linting, formating,...)
# Installed through `pip install -e .[dev]`
dev = [
    "pytest",
    "pytest-xdist",
    "pylint>=2.6.0",
    "pyink",
]

[tool.pyink]
# Formatting configuration to follow Google style-guide
line-length = 80
unstable = true
pyink-indentation = 2
pyink-use-majority-quotes = true

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)
